# algorithm_engineering

./: .gitignore  README.md
answers/exam-assignment-1/: estimate_pi_parallelized.cpp  exam-assignment-1.txt  pi_monte_carlo_parallelized.cpp
answers/exam-assignment-10/: exam-assignment-10.txt
answers/exam-assignment-11/: exam-assignment-11.txt
answers/exam-assignment-12/: exam-assignment-12.txt
answers/exam-assignment-2/: continue_hack.cpp  exam-assignment-2.txt  pi_openmp_v1.cpp  race_condition.cpp  unbalanced_workload.cpp
answers/exam-assignment-3/: exam-assignment-3.txt  mandelbrot_implemented_and_parallelized.cpp  pi_cpp_only.cpp  pi_parallelized_one_line.cpp
answers/exam-assignment-4/: exam-assignment-4.txt  merge_multi_threaded.cpp  merge_sort_speed_up.cpp
answers/exam-assignment-5/: exam-assignment-5.txt
answers/exam-assignment-6/: exam-assignment-6.txt
answers/exam-assignment-7/: exam-assignment-7.txt
answers/exam-assignment-8/: exam-assignment-8.txt
answers/exam-assignment-9/: exam-assignment-9.txt
paper/src/: Makefile  literature.bib  paper.tex
project/: CMakeLists.txt  main.cpp  quicksort.cpp  quicksort_omp.cpp
project/algeng/: CMakeLists.txt
project/algeng/include/: quicksort.h  quicksort.hpp
project/algeng/src/: quicksort.cpp
project/benchmarks/: benchmarks-partition.cpp  benchmarks-select.cpp  benchmarks-sort.cpp  run-benchmarks-partition.sh  run-benchmarks-select.sh  run-benchmarks-sort.sh
project/benchmarks/results/run3/: benchmark-partition-1000000.txt  benchmark-partition-10000000.txt  benchmark-partition-100000000.txt  benchmark-partition-200000000.txt  benchmark-partition-500000000.txt  benchmark-select-1000000.txt  benchmark-select-10000000.txt  benchmark-select-20000000.txt  benchmark-select-50000000.txt  benchmark-sort-100000.txt  benchmark-sort-1000000.txt  benchmark-sort-10000000.txt  benchmark-sort-20000000.txt
project/benchmarks/results/run4/: benchmark-partition-1000000.txt  benchmark-partition-10000000.txt  benchmark-partition-100000000.txt  benchmark-partition-200000000.txt  benchmark-partition-500000000.txt  benchmark-select-1000000.txt  benchmark-select-10000000.txt  benchmark-select-20000000.txt  benchmark-select-50000000.txt  benchmark-sort-100000.txt  benchmark-sort-1000000.txt  benchmark-sort-10000000.txt  benchmark-sort-20000000.txt
project/benchmarks/results/run5/: benchmark-partition-1000000.txt  benchmark-partition-10000000.txt  benchmark-partition-100000000.txt  benchmark-partition-200000000.txt  benchmark-partition-500000000.txt  benchmark-select-1000000.txt  benchmark-select-10000000.txt  benchmark-select-20000000.txt  benchmark-select-50000000.txt  benchmark-sort-100000.txt  benchmark-sort-1000000.txt  benchmark-sort-10000000.txt  benchmark-sort-20000000.txt
project/test/: CMakeLists.txt  benchmarks.cpp  main.cpp  tests.cpp  unit-tests.cpp
